وازلي تم اضافة النسخ الاحتياطي والاسترداد والبصمة وكلمة المرور

--- a/wazly/lib/l10n/app_ar.arb
+++ b/wazly/lib/l10n/app_ar.arb
@@ -15,6 +15,7 @@
   "recordDebt": "تسجيل دين",
   "settlePay": "تسوية / دفع",
   "language": "اللغة",
+  "appearance": "المظهر",
   "english": "الإنجليزية",
   "arabic": "العربية",
   "save": "حفظ",
@@ -75,6 +76,8 @@
   "sortByDate": "حسب التاريخ",
   "sortByName": "حسب الاسم",
   "sortByDueDate": "حسب موعد السداد",
+  "sortByBalance": "حسب الرصيد",
+  "sortByRecent": "حسب النشاط الأخير",
   "search": "بحث",
   "filter": "فلترة",
   "sort": "ترتيب",
@@ -87,5 +90,27 @@
   "deleteAccount": "حذف الحساب",
   "editAccount": "تعديل الحساب",
   "deleteConfirmation": "هل أنت متأكد من حذف هذا الحساب وجميع معاملاته؟",
-  "delete": "حذف"
+  "delete": "حذف",
+  "dataManagement": "إدارة البيانات",
+  "backupData": "نسخ احتياطي",
+  "restoreData": "استرداد البيانات",
+  "systemReset": "تهيئة النظام",
+  "security": "الأمان",
+  "appLock": "قفل التطبيق",
+  "biometric": "البصمة",
+  "password": "كلمة المرور",
+  "formatConfirmation": "هل أنت متأكد من تهيئة النظام؟ سيتم فقدان جميع البيانات.",
+  "format": "تهيئة",
+  "setupPassword": "إعداد كلمة المرور",
+  "enterPassword": "أدخل كلمة المرور",
+  "authenticateToUnlock": "يرجى التحقق لفتح وازلي",
+  "securityEnabled": "تم تفعيل الأمان بنجاح",
+  "securityDisabled": "تم تعطيل الأمان بنجاح",
+  "backupExported": "تم تصدير النسخة الاحتياطية بنجاح",
+  "backupRestored": "تم استرداد البيانات بنجاح",
+  "backupFailed": "فشلت عملية النسخ الاحتياطي",
+  "theyPaidMe": "دفعوا لي",
+  "iPaidThem": "دفعت لهم",
+  "miniSidebar": "شريط جانبي مصغر",
+  "miniSidebarDesc": "إظهار أيقونات التنقل في الجانب للوصول السريع"
 }
