--- a/wazly/lib/l10n/app_en.arb
+++ b/wazly/lib/l10n/app_en.arb
@@ -14,7 +14,9 @@
   "addTransaction": "Add Transaction",
   "recordDebt": "Record Debt",
   "settlePay": "Settle / Pay",
+  "settings": "Settings",
   "language": "Language",
+  "appearance": "Appearance",
   "english": "English",
   "arabic": "Arabic",
   "save": "Save",
@@ -75,6 +77,8 @@
   "sortByDate": "By Date",
   "sortByName": "By Name",
   "sortByDueDate": "By Due Date",
+  "sortByBalance": "By Balance",
+  "sortByRecent": "By Recent Activity",
   "search": "Search",
   "filter": "Filter",
   "sort": "Sort",
@@ -87,5 +91,27 @@
   "deleteAccount": "Delete Account",
   "editAccount": "Edit Account",
   "deleteConfirmation": "Are you sure you want to delete this account and all its transactions?",
-  "delete": "Delete"
+  "delete": "Delete",
+  "dataManagement": "Data Management",
+  "backupData": "Backup Data",
+  "restoreData": "Restore Data",
+  "systemReset": "System Reset",
+  "security": "Security",
+  "appLock": "App Lock",
+  "biometric": "Biometric",
+  "password": "Password",
+  "formatConfirmation": "Are you sure you want to format the system? All data will be lost.",
+  "format": "Format",
+  "setupPassword": "Setup Password",
+  "enterPassword": "Enter Password",
+  "authenticateToUnlock": "Please authenticate to unlock Wazly",
+  "securityEnabled": "Security enabled successfully",
+  "securityDisabled": "Security disabled successfully",
+  "backupExported": "Backup exported successfully",
+  "backupRestored": "Backup restored successfully",
+  "backupFailed": "Backup operation failed",
+  "theyPaidMe": "They paid me",
+  "iPaidThem": "I paid them",
+  "miniSidebar": "Mini-Sidebar",
+  "miniSidebarDesc": "Show navigation icons on the side for quick access"
 }
