--- a/wazly/lib/l10n/app_ar.arb
+++ b/wazly/lib/l10n/app_ar.arb
@@ -86,6 +86,22 @@
   "viewDetails": "عرض التفاصيل",
   "settleDebt": "تسوية الدين",
   "overdue": "متأخر",
+  "profile": "الملف الشخصي",
+  "editProfile": "تعديل الملف الشخصي",
+  "profileUpdated": "تم تحديث الملف الشخصي بنجاح",
+  "name": "الاسم",
+  "nameRequired": "الاسم مطلوب",
+  "email": "البريد الإلكتروني",
+  "phone": "الهاتف",
+  "currency": "العملة",
+  "notSet": "غير محدد",
+  "welcomeBack": "مرحباً بعودتك",
+  "signInWithGoogle": "تسجيل الدخول بجوجل",
+  "comingSoon": "قريباً!",
+  "owedToMe": "مستحق لي",
+  "iOwe": "علي دين",
+  "welcomeTagline": "إدارة أموالك بسهولة",
+  "continueWithoutSignIn": "المتابعة بدون تسجيل",
   "dueIn": "مستحق خلال",
   "days": "أيام",
   "settled": "مسدد",
