--- a/wazly/lib/l10n/app_en.arb
+++ b/wazly/lib/l10n/app_en.arb
@@ -87,6 +87,22 @@
   "viewDetails": "View Details",
   "settleDebt": "Settle Debt",
   "overdue": "Overdue",
+  "profile": "Profile",
+  "editProfile": "Edit Profile",
+  "profileUpdated": "Profile updated successfully",
+  "name": "Name",
+  "nameRequired": "Name is required",
+  "email": "Email",
+  "phone": "Phone",
+  "currency": "Currency",
+  "notSet": "Not set",
+  "welcomeBack": "Welcome back",
+  "signInWithGoogle": "Sign in with Google",
+  "comingSoon": "Coming soon!",
+  "owedToMe": "Owed to me",
+  "iOwe": "I owe",
+  "welcomeTagline": "Manage your finances with ease",
+  "continueWithoutSignIn": "Continue without sign-in",
   "dueIn": "Due in",
   "days": "days",
   "settled": "Settled",
